# Comet

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: infer.sh  tokenize.sh  train.sh
talos/: __init__.py  init.py
talos/args/: __init__.py  ckpt_args.py  data_args.py  generation_args.py  parser.py  training_args.py
talos/data/: __init__.py  api.py  base.py  chunk.py  placeholder.py  samplers.py  utils.py
talos/fsdp/: __init__.py  mixed_prec.py
talos/hf/: __init__.py  chat_template.py  ring_attn.py  utils.py
talos/hf/qwen3/: __init__.py  utils.py
talos/io/: __init__.py  ckpt.py  cloud.py  filesystem.py  hf_loader.py  hf_saver.py  hf_utils.py  loader.py  mos.py  paths.py  saver.py  utils.py
talos/ops/: linear_cross_entropy.py
talos/optim/: __init__.py  lr_scheduler.py  optimizer.py
talos/task/: __init__.py
talos/task/comet/: __init__.py  modeling_qwen3.py  plugins.py  utils.py
talos/task/comet/data/: __init__.py  chunk_plan.py  chunk_strategy.py  generation_preprocess.py  input_builder.py  train_preprocess.py
talos/task/comet/distributed/: __init__.py  async_p2p.py  dispatch.py  p2p.py  parallel_state.py  plugins.py
talos/train/: __init__.py  callback.py  hf_trainer.py  trainer.py
talos/utils/: __init__.py  lazy_loader.py  logger.py  profile.py  test.py  timers.py  tools.py  tracker.py  train_state.py
workflows/: inference.py  train_from_qwen3.py  train_pre_tokenize.py
